# signals-app

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  run_local.py
docs/plans/: 2026-03-01-conversational-signal-creation-design.md  2026-03-01-conversational-signal-creation.md  2026-03-01-signals-design.md  2026-03-01-signals-implementation.md  2026-03-02-playwright-source-discovery-design.md  2026-03-02-playwright-source-discovery.md  2026-03-03-alerts-design.md  2026-03-03-alerts-implementation.md  2026-03-03-simplified-signal-creation-design.md  2026-03-03-simplified-signal-creation.md  2026-03-05-digest-signals-design.md  2026-03-05-digest-signals-plan.md  2026-03-06-site-agents-design.md  2026-03-06-site-agents-plan.md
scripts/: migrate_signal_type.py  set_subscription.py
src/: config.py  db.py  main.py  templates_config.py
src/crawling/: __init__.py  actions.py  agent.py  browser.py  js.py
src/models/: app_config.py  app_event.py  digest.py  signal.py  signal_run.py  user.py
src/routes/: alerts.py  auth.py  config.py  (+3 more)
tests/: conftest.py  test_brave.py  test_browser_factory.py  test_condition_eval.py  test_config.py  test_crawl_text.py  test_crawling.py  test_digest_executor.py  test_digest_model.py  test_executor.py  test_integration.py  test_models.py  test_notify.py  test_routes_signals.py  test_scheduler.py  test_site_agent_registry.py  test_sky_preview_route.py  test_skyscanner_agent.py  test_skyscanner_memory.py  test_skyscanner_tools.py  test_skyscanner_types.py
(+36 files in other folders)
