[project]
name = "signals-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "beanie>=2.0.1",
    "fastapi>=0.134.0",
    "litellm>=1.67.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "motor>=3.7.1",
    "playwright>=1.58.0",
    "pydantic-settings>=2.13.1",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "resend>=2.0.0",
    "python-multipart>=0.0.22",
    "uvicorn[standard]>=0.41.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2020.1.16",
    "markdown>=3.10.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mongomock-motor>=0.0.36",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-m 'not integration'"
markers = ["integration: live network tests — run with: pytest -m integration"]
